--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -2,8 +2,11 @@ name: Bot Alert Saham
 
 on:
   schedule:
-    - cron: "*/5 * * * *"   # jalan tiap 5 menit
-  workflow_dispatch: {}      # bisa dijalankan manual
+    - cron: "0 * * * *"       # jalan tiap 1 jam, menit ke-00
+  workflow_dispatch: {}
+
+permissions:
+  contents: write             # perlu untuk commit cache
 
 jobs:
   run-bot:
@@ -28,3 +31,15 @@ jobs:
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
           python bot/main.py
+
+      - name: Commit cache (sent.json)
+        run: |
+          if [[ -n "$(git status --porcelain)" ]]; then
+            git config user.name "github-actions[bot]"
+            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+            git add data/sent.json
+            git commit -m "update cache [skip ci]"
+            git push
+          else
+            echo "No cache changes."
+          fi
