--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,12 +1,15 @@
 name: Bot Alert Saham
-
 on:
   schedule:
-    - cron: '0 * * * *'
-  workflow_dispatch:
+    - cron: "*/10 * * * *"   # tiap 10 menit
+  workflow_dispatch: {}      # bisa run manual
 
 permissions:
-  contents: write
+  contents: write            # biar bisa commit sent_items.json
+
+concurrency:
+  group: news-bot
+  cancel-in-progress: false
 
 jobs:
   run-bot:
@@ -18,26 +21,24 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
-
-      - name: Install deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests beautifulsoup4
+          python-version: "3.11"
 
       - name: Run bot
         env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: python bot/main.py
-
-      - name: Commit cache (sent.json)
+          MAX_MSG_PER_CYCLE: "12"
         run: |
-          if [[ -n "$(git status --porcelain)" ]]; then
-            git config user.name "github-actions[bot]"
-            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add data/sent.json
-            git commit -m "update cache [skip ci]"
+          python -V
+          python bot/main.py
+
+      - name: Commit cache (sent_items.json)
+        run: |
+          if [[ -n "$(git status --porcelain sent_items.json 2>/dev/null)" ]]; then
+            git config user.name "news-bot"
+            git config user.email "actions@github.com"
+            git add sent_items.json
+            git commit -m "chore: update sent_items.json"
             git push
           else
             echo "No cache changes."
